Load error finally fixed, also fixed scroll bar appearing bc of width and the img overflowing

--- a/style.css
+++ b/style.css
@@ -5,9 +5,18 @@
 
 html {
   background-color: #141414;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
 }
 body {
   margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
 }
 
 canvas {
@@ -31,6 +40,7 @@ main {
   grid-template-rows: 250vh 100vh 100vh;
   left: 0;
   top: 0;
+  overflow: hidden;
 }
 
 h1,
